--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,7 @@
     <meta name="author" content="{{ site.author.name }}">
     <!-- Bootstrap styles -->
     <link href="{{ ASSET_PATH }}/css/fatec-bootstrap.min.css" rel="stylesheet">
+    <link href="{{ ASSET_PATH }}/css/pygments-manni.css" rel="stylesheet">    
     <!-- Custom styles -->
     <link href="{{ ASSET_PATH }}/css/style.css" rel="stylesheet" type="text/css" media="all">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
