Troca para Bootstrap Original

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,9 @@
     </div>
 
     <!-- Scripts -->
-    <script src="{{ ASSET_PATH }}/js/jquery.min.js"></script>
-    <script src="{{ ASSET_PATH }}/js/bootstrap.min.js"></script>
+    <script src="{{ ASSET_PATH }}/js/jquery.min.js"></script>	
+    <!--  <script src="{{ ASSET_PATH }}/js/bootstrap.min.js"></script>-->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
     <script type="text/javascript">
 
