--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="{{ site.author.name }}">
     <!-- Bootstrap styles -->
-    <link href="{{ ASSET_PATH }}/css/fatec-bootstrap.min.css" rel="stylesheet">
+    <!--  <link href="{{ ASSET_PATH }}/css/fatec-bootstrap.min.css" rel="stylesheet">-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link href="{{ ASSET_PATH }}/css/pygments-manni.css" rel="stylesheet">    
     <!-- Custom styles -->
     <link href="{{ ASSET_PATH }}/css/style.css" rel="stylesheet" type="text/css" media="all">
