--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,16 +28,15 @@
     }
 }
 
-body, h1, h2, h3, h4, p {
-  font-family: 'Roboto Slab', serif;
-}
-
 h1, h2, h3, h4 {
- font-weight: bold;
-}
+  font-family: 'Roboto Slab', serif;
+  font-weight: bold;
+} 
 
 body {
   overflow-x: hidden;
+  font-size: 170%;
+  margin-bottom: 60px;
 }
 
 .label {
