--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,11 +38,11 @@
         <div class="collapse navbar-collapse" id="jb-navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="{{ BASE_PATH }}/index.html" class="active">Início</a></li>
-            <li><a href="{{ BASE_PATH }}/calendario.html">Calendário</a></li>
-            <li><a href="{{ BASE_PATH }}/archive.html">Arquivo</a></li>
-            <li><a href="{{ BASE_PATH }}/categories.html">Categorias</a></li>
             <li><a href="{{ BASE_PATH }}/pages.html">Páginas</a></li>
-            <li><a href="{{ BASE_PATH }}/tags.html">Tags</a></li>
+            <li><a href="{{ BASE_PATH }}/calendario.html">Calendário</a></li>            
+            <!--<li><a href="{{ BASE_PATH }}/archive.html">Arquivo</a></li>-->
+            <!--<li><a href="{{ BASE_PATH }}/categories.html">Categorias</a></li>-->            
+            <!--<li><a href="{{ BASE_PATH }}/tags.html">Tags</a></li>-->
             <li><a href="https://github.com/adammacias/fatec-si" target="_blank">GitHub</a></li>
             <li><a href="https://trello.com/b/qYTMMlgy/fatec-curso-si" target="_blank">Trello</a></li>
           </ul>
