--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,5 @@
----
-theme :
-  name : bootstrap-3
----
-{% include JB/setup %}
-{% include header.html %}
-
-<main id="main" class="container"> 
-        {{ content }}
+{% include head.html %}
+<main class="container">
+    {{ content }}
 </main>
-
 {% include footer.html %}
