--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,14 +1,17 @@
 ---
 layout: default
 ---
-<div class="page-header text-center">
-  <h1>{{ page.title }}</h1>
-  {% if page.tagline %}<p class="lead">{{ page.tagline }}</p>{% endif %}
-</div>
+<div class="home">
 
-<div class="row">
-  <div class="col-xs-12">
-    {{ content }}
-  </div>
-</div>
+  <header class="page-header">
+    <h1>{{ site.title }}</h1>
+    <p class="lead">{{ site.description }}</p>
+  </header>
 
+  <article class="content">
+    <p class="text-center">
+        <img src="https://cloud.githubusercontent.com/assets/1139893/6883585/e33973a8-d592-11e4-9aca-959c3472b16e.gif" alt="" class="img-responsive">
+    </p>
+  </article>
+
+</div>
