--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,14 @@
 ---
 layout: default
 ---
-{% include JB/setup %}
-<div class="page-header">
-  <h1>{{ page.title }} {% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
-</div>
+<div class="page">
 
-<div class="row">
-  <div class="col-xs-12">
+  <header class="page-header">
+    <h1>{{ page.title }}</h1>
+  </header>
+
+  <article class="content">
     {{ content }}
-  </div>
-</div>
+  </article>
 
+</div>
