--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,10 +9,10 @@
         <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
         <link rel="shortcut icon" href="{{ "favicon.png" | prepend: site.url_content }}">
         <link rel="stylesheet" type="text/css" media="all" href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,700" />
-        <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | prepend: site.url | prepend: site.baseurl }}">
-        <link rel="stylesheet" href="{{ "css/main.css" | prepend: site.url | prepend: site.baseurl }}">
-        <link rel="stylesheet" href="{{ "css/pygments-manni.css" | prepend: site.url | prepend: site.baseurl }}">
-        <base href="{{ prepend: site.url | prepend: site.baseurl }}">
+        <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | prepend: site.baseurl | prepend: site.url }}">
+        <link rel="stylesheet" href="{{ "css/main.css" | prepend: site.baseurl | prepend: site.url }}">
+        <link rel="stylesheet" href="{{ "css/pygments-manni.css" | prepend: site.baseurl | prepend: site.url }}">
+        <base href="{{ site.url | prepend: site.baseurl }}">
         <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
@@ -31,9 +31,9 @@
                 </div>
                 <div class="collapse navbar-collapse" id="jb-navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="{{ "index.html" | prepend: site.url | prepend: site.baseurl }}">Início</a></li>
-                        <li><a href="{{ "disciplinas.html" | prepend: site.url | prepend: site.baseurl }}">Disciplinas</a></li>
-                        <li><a href="{{ "calendario.html" | prepend: site.url | prepend: site.baseurl }}">Calendário</a></li>
+                        <li><a href="{{ "index.html" | prepend: site.baseurl | prepend: site.url }}">Início</a></li>
+                        <li><a href="{{ "disciplinas.html" | prepend: site.baseurl | prepend: site.url }}">Disciplinas</a></li>
+                        <li><a href="{{ "calendario.html" | prepend: site.baseurl | prepend: site.url }}">Calendário</a></li>
                         <li><a href="{{ site.url_repository }}" target="_blank">GitHub</a></li>
                         <li><a href="https://trello.com/b/qYTMMlgy/fatec-curso-si" target="_blank">Trello</a></li>
                     </ul>
