Melhora estrutura de diretorios e outras :poop: coisas

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
         <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
         <link rel="shortcut icon" href="{{ "favicon.png" | prepend: site.url_content }}">
         <link rel="stylesheet" type="text/css" media="all" href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,700" />
-        <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | prepend: site.baseurl | prepend: site.url }}">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="{{ "css/main.css" | prepend: site.baseurl | prepend: site.url }}">
         <link rel="stylesheet" href="{{ "css/pygments-manni.css" | prepend: site.baseurl | prepend: site.url }}">
         <base href="{{ site.url | prepend: site.baseurl }}">
