--- a/css/main.scss
+++ b/css/main.scss
@@ -1,7 +1,7 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
-@charset "utf-8";
+
 
 /* Sticky footer styles
 -------------------------------------------------- */
@@ -22,48 +22,46 @@ body {
   background-color: #f5f5f5;
 }
 
+/*
+ * Navbar
+ */
 @media (min-width: 768px) {
-    .navbar { border-bottom: 1px solid #94A9B1}
+    .navbar {
+        border-bottom: 1px solid #94A9B1;
+    }
     .navbar .navbar-nav {
         display: inline-block;
         float: none;
         vertical-align: top;
     }
-
     .navbar .navbar-collapse {
         text-align: center;
     }
 }
 
-h1, h2, h3, h4 {
-  font-family: 'Roboto Slab', serif;
-  font-weight: bold;
-}
-
+/*
+ * General
+ */
 body {
-  overflow-x: hidden;
-  font-size: 170%;
-}
-
-main.container {
-    padding-bottom: 80px;
-}
-
-.label {
-  box-shadow: 0; text-shadow: 0;
-}
-
-.container {
-  max-width: 800px;
+    overflow-x: hidden;
+    font-size: 170%;
+    h1, h2, h3, h4 {
+        font-family: 'Roboto Slab', serif;
+        font-weight: bold;
+    }
+    main.container {
+        padding-bottom: 40px;
+        max-width: 800px;
+    }
 }
 
 #header-main {
-  text-align: center;
-  padding: 60px 0 40px;
+    text-align: center;
+    padding: 60px 0 40px;
 }
 
 .list-posts li {
-  margin: 20px 0 30px
+    margin: 20px 0 30px;
 }
 
 .footer {
@@ -82,7 +80,26 @@ main.container {
     }
     .content {
         img {
-            min-width:100%;
+            min-width: 100%;
         }
+    }
+}
+
+/*
+ * Content
+ */
+article.content {
+    h2 {
+        margin-top: 70px;
+    }
+    h3 {
+        margin-top: 50px;
+        padding-left: 20px;
+        border-left: 5px solid #CCC;
+    }
+
+    .label {
+        box-shadow: 0;
+        text-shadow: 0;
     }
 }
