--- a/css/main.scss
+++ b/css/main.scss
@@ -44,14 +44,14 @@ body {
  */
 body {
     overflow-x: hidden;
-    font-size: 170%;
+    font-size: 160%;
     h1, h2, h3, h4 {
         font-family: 'Roboto Slab', serif;
         font-weight: bold;
     }
     main.container {
         padding-bottom: 40px;
-        max-width: 800px;
+        max-width: 600px;
     }
 }
 
@@ -90,12 +90,15 @@ body {
  */
 article.content {
     h2 {
-        margin-top: 70px;
+        margin-top: 80px;
     }
     h3 {
-        margin-top: 50px;
+        margin-top: 60px;
         padding-left: 20px;
         border-left: 5px solid #CCC;
+    }
+    h4 {
+        margin-top: 40px;
     }
 
     .label {
