--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,8 +34,9 @@
                         <li><a href="{{ "index.html" | prepend: site.baseurl | prepend: site.url }}">Início</a></li>
                         <li><a href="{{ "disciplinas.html" | prepend: site.baseurl | prepend: site.url }}">Disciplinas</a></li>
                         <li><a href="{{ "calendario.html" | prepend: site.baseurl | prepend: site.url }}">Calendário</a></li>
+                        <li><a href="{{ site.url_repository }}#fatecrl---sistemas-para-internet" target="_blank">Sobre</a></li>
+                        <li><a href="{{ site.url_repository }}#contribua-com-o-projeto" target="_blank">Contribua</a></li>
                         <li><a href="{{ site.url_repository }}" target="_blank">GitHub</a></li>
-                        <li><a href="https://trello.com/b/qYTMMlgy/fatec-curso-si" target="_blank">Trello</a></li>
                     </ul>
                 </div>
             </nav>
