--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="container">
-        <p class="text-muted text-center fat-copy">Feito com <span class="text-danger">❤</span> por um <a href="https://github.com/fatechub" target="_blank">grupo de nerds</a> da Fatec.</p>
+        <p class="text-muted text-center fat-copy">Feito com <span class="text-danger">❤</span> por um <a href="https://github.com/fatechub/fatecrl-curso-si/graphs/contributors" target="_blank">grupo de nerds</a> de SI da Fatecr</p>
     </div>
 </footer>
 </body>
