--- a/css/main.scss
+++ b/css/main.scss
@@ -51,7 +51,10 @@ body {
     }
     main.container {
         padding-bottom: 40px;
-        max-width: 600px;
+        //max-width: 800px;
+        img {
+            max-width:100%;
+        }
     }
 }
 
