--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,6 +30,7 @@
                         <li><a href="{{ "index.html" | prepend: site.baseurl | prepend: site.url }}">Início</a></li>
                         <li><a href="{{ "disciplinas" | prepend: site.baseurl | prepend: site.url }}">Disciplinas</a></li>
                         <li><a href="{{ "calendario.html" | prepend: site.baseurl | prepend: site.url }}">Calendário</a></li>
+                        <li><a href="{{ "links.html" | prepend: site.baseurl | prepend: site.url }}">Links</a></li>
                         <li><a href="{{ "sobre.html" | prepend: site.baseurl | prepend: site.url }}">Sobre</a></li>
                         <li><a href="{{ "contribuir.html" | prepend: site.baseurl | prepend: site.url }}"><strong>Como contribuir</strong></a></li>
                         <li><a href="{{ site.url_repository }}" target="_blank">GitHub</a></li>
