Update nav main

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,11 +31,12 @@
                         <li><a href="{{ "disciplinas" | prepend: site.baseurl | prepend: site.url }}">Disciplinas</a></li>
                         <li><a href="{{ "calendario.html" | prepend: site.baseurl | prepend: site.url }}">Calendário</a></li>
                         <li><a href="{{ "links.html" | prepend: site.baseurl | prepend: site.url }}">Links</a></li>
-                        <li><a href="{{ "sobre.html" | prepend: site.baseurl | prepend: site.url }}">Sobre</a></li>
                         <li><a href="{{ "contribuir.html" | prepend: site.baseurl | prepend: site.url }}"><strong>Como contribuir</strong></a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="{{ "sobre.html" | prepend: site.baseurl | prepend: site.url }}">Sobre</a></li>
                         <li><a href="{{ site.url_repository }}" target="_blank">GitHub</a></li>
                         <li><a href="https://trello.com/b/qYTMMlgy/fatec-curso-si" target="_blank">Trello</a></li>
-
                     </ul>
                 </div>
             </nav>
