Remove style nav

--- a/css/main.scss
+++ b/css/main.scss
@@ -30,12 +30,12 @@ body {
         border-bottom: 1px solid #94A9B1;
     }
     .navbar .navbar-nav {
-        display: inline-block;
-        float: none;
-        vertical-align: top;
+        //display: inline-block;
+        //float: none;
+        //vertical-align: top;
     }
     .navbar .navbar-collapse {
-        text-align: center;
+        //text-align: center;
     }
 }
 
