--- a/css/main.scss
+++ b/css/main.scss
@@ -46,8 +46,8 @@ body {
     overflow-x: hidden;
     font-size: 160%;
     h1, h2, h3, h4 {
-        font-family: 'Roboto Slab', serif;
-        font-weight: bold;
+        font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-weight: 700;
     }
     main.container {
         padding-bottom: 40px;
