--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,26 +17,28 @@
     <body>
         <div id="wrap">
             <nav class="navbar navbar-custom" role="navigation">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#jb-navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    </button>
-                </div>
-                <div class="collapse navbar-collapse" id="jb-navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a href="{{ "index.html" | prepend: site.baseurl | prepend: site.url }}">Início</a></li>
-                        <li><a href="{{ "disciplinas" | prepend: site.baseurl | prepend: site.url }}">Disciplinas</a></li>
-                        <li><a href="{{ "calendario.html" | prepend: site.baseurl | prepend: site.url }}">Calendário</a></li>
-                        <li><a href="{{ "links.html" | prepend: site.baseurl | prepend: site.url }}">Links</a></li>
-                        <li><a href="{{ "contribuir.html" | prepend: site.baseurl | prepend: site.url }}"><strong>Como contribuir</strong></a></li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="{{ "sobre.html" | prepend: site.baseurl | prepend: site.url }}">Sobre</a></li>
-                        <li><a href="{{ site.url_repository }}" target="_blank">GitHub</a></li>
-                        <li><a href="https://trello.com/b/qYTMMlgy/fatec-curso-si" target="_blank">Trello</a></li>
-                    </ul>
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#jb-navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                    <div class="collapse navbar-collapse" id="jb-navbar-collapse">
+                        <ul class="nav navbar-nav">
+                            <li><a href="{{ "index.html" | prepend: site.baseurl | prepend: site.url }}">Início</a></li>
+                            <li><a href="{{ "disciplinas" | prepend: site.baseurl | prepend: site.url }}">Disciplinas</a></li>
+                            <li><a href="{{ "calendario.html" | prepend: site.baseurl | prepend: site.url }}">Calendário</a></li>
+                            <li><a href="{{ "links.html" | prepend: site.baseurl | prepend: site.url }}">Links</a></li>
+                            <li><a href="{{ "contribuir.html" | prepend: site.baseurl | prepend: site.url }}"><strong>Como contribuir</strong></a></li>
+                        </ul>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="{{ "sobre.html" | prepend: site.baseurl | prepend: site.url }}">Sobre</a></li>
+                            <li><a href="{{ site.url_repository }}" target="_blank">GitHub</a></li>
+                            <li><a href="https://trello.com/b/qYTMMlgy/fatec-curso-si" target="_blank">Trello</a></li>
+                        </ul>
+                    </div>
                 </div>
             </nav>
