--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,17 +16,17 @@
     </head>
     <body>
         <div id="wrap">
-            <nav class="navbar navbar-custom" role="navigation">
+            <div class="navbar navbar-default" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#jb-navbar-collapse">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         </button>
                     </div>
-                    <div class="collapse navbar-collapse" id="jb-navbar-collapse">
+                    <nav class="collapse navbar-collapse" id="navbar-collapse">
                         <ul class="nav navbar-nav">
                             <li><a href="{{ "index.html" | prepend: site.baseurl | prepend: site.url }}">Início</a></li>
                             <li><a href="{{ "disciplinas" | prepend: site.baseurl | prepend: site.url }}">Disciplinas</a></li>
@@ -39,6 +39,6 @@
                             <li><a href="{{ site.url_repository }}" target="_blank">GitHub</a></li>
                             <li><a href="https://trello.com/b/qYTMMlgy/fatec-curso-si" target="_blank">Trello</a></li>
                         </ul>
-                    </div>
+                    </nav>
                 </div>
-            </nav>
+            </div>
