Add mapa e remove pagina links closes #30

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,7 +30,7 @@
                             <li><a href="{{ "index.html" | prepend: site.baseurl | prepend: site.url }}">Início</a></li>
                             <li><a href="{{ "disciplinas" | prepend: site.baseurl | prepend: site.url }}">Disciplinas</a></li>
                             <li><a href="{{ "calendario.html" | prepend: site.baseurl | prepend: site.url }}">Calendário</a></li>
-                            <li><a href="{{ "links.html" | prepend: site.baseurl | prepend: site.url }}">Links</a></li>
+                            <li><a href="http://fatecrl.edu.br/site/institucional/downloads">Downloads</a></li>
                             <li><a href="{{ "contribuir.html" | prepend: site.baseurl | prepend: site.url }}"><strong>Contribuir</strong></a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
