Melhora navbar e add link Dropbox para colaboradores

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,10 +24,10 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         </button>
+                        <a href="{{ "index.html" | prepend: site.baseurl | prepend: site.url }}" class="navbar-brand">FATEC-RL ♥ SI</a>
                     </div>
                     <nav class="collapse navbar-collapse" id="navbar-collapse">
                         <ul class="nav navbar-nav">
-                            <li><a href="{{ "index.html" | prepend: site.baseurl | prepend: site.url }}">Início</a></li>
                             <li><a href="{{ "disciplinas" | prepend: site.baseurl | prepend: site.url }}">Disciplinas</a></li>
                             <li><a href="{{ "calendario.html" | prepend: site.baseurl | prepend: site.url }}">Calendário</a></li>
                             <li><a href="http://fatecrl.edu.br/site/institucional/downloads">Downloads</a></li>
@@ -36,6 +36,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="{{ "sobre.html" | prepend: site.baseurl | prepend: site.url }}">Sobre</a></li>
                             <li><a href="{{ site.url_repository }}" target="_blank">GitHub</a></li>
+                            <li><a href="https://www.dropbox.com/home/FatecRL%20Dropbox" target="_blank">Dropbox</a></li>
                             <li><a href="https://trello.com/b/qYTMMlgy/fatec-curso-si" target="_blank">Trello</a></li>
                         </ul>
                     </nav>
